--- a/src/output.css
+++ b/src/output.css
@@ -9,11 +9,16 @@
       "Courier New", monospace;
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-orange-400: oklch(75% 0.183 55.934);
+    --color-yellow-300: oklch(90.5% 0.182 98.111);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
+    --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -27,6 +32,10 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
     --font-weight-medium: 500;
@@ -39,6 +48,7 @@
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
+    --radius-4xl: 2rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -225,6 +235,12 @@
       max-width: 96rem;
     }
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -236,6 +252,9 @@
   }
   .mr-auto {
     margin-right: auto;
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
   }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
@@ -261,8 +280,17 @@
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
+  .h-11 {
+    height: calc(var(--spacing) * 11);
+  }
   .h-12 {
     height: calc(var(--spacing) * 12);
+  }
+  .h-13 {
+    height: calc(var(--spacing) * 13);
   }
   .h-38 {
     height: calc(var(--spacing) * 38);
@@ -276,8 +304,20 @@
   .w-15 {
     width: calc(var(--spacing) * 15);
   }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
   .w-34 {
     width: calc(var(--spacing) * 34);
+  }
+  .w-38 {
+    width: calc(var(--spacing) * 38);
+  }
+  .w-40 {
+    width: calc(var(--spacing) * 40);
   }
   .w-46 {
     width: calc(var(--spacing) * 46);
@@ -326,6 +366,9 @@
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .items-center {
     align-items: center;
   }
@@ -335,11 +378,23 @@
   .justify-items-center {
     justify-items: center;
   }
+  .gap-x-6 {
+    column-gap: calc(var(--spacing) * 6);
+  }
+  .gap-x-7 {
+    column-gap: calc(var(--spacing) * 7);
+  }
+  .gap-x-8 {
+    column-gap: calc(var(--spacing) * 8);
+  }
   .gap-x-10 {
     column-gap: calc(var(--spacing) * 10);
   }
   .gap-y-3 {
     row-gap: calc(var(--spacing) * 3);
+  }
+  .gap-y-4 {
+    row-gap: calc(var(--spacing) * 4);
   }
   .gap-y-5 {
     row-gap: calc(var(--spacing) * 5);
@@ -368,6 +423,12 @@
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
+  .rounded-4xl {
+    border-radius: var(--radius-4xl);
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -387,26 +448,62 @@
   .border-l-black {
     border-left-color: var(--color-black);
   }
+  .bg-blue-400 {
+    background-color: var(--color-blue-400);
+  }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
+  }
   .bg-orange-400 {
     background-color: var(--color-orange-400);
   }
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-yellow-300 {
+    background-color: var(--color-yellow-300);
+  }
   .object-cover {
     object-fit: cover;
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-8 {
+    padding-inline: calc(var(--spacing) * 8);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
@@ -417,6 +514,18 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
   .text-6xl {
     font-size: var(--text-6xl);
@@ -433,6 +542,12 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-\[19px\] {
+    font-size: 19px;
+  }
+  .text-\[40px\] {
+    font-size: 40px;
   }
   .leading-18 {
     --tw-leading: calc(var(--spacing) * 18);
@@ -461,8 +576,17 @@
   .text-blue-500 {
     color: var(--color-blue-500);
   }
+  .text-blue-600 {
+    color: var(--color-blue-600);
+  }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
   .text-gray-600 {
     color: var(--color-gray-600);
+  }
+  .text-gray-700 {
+    color: var(--color-gray-700);
   }
   .text-white {
     color: var(--color-white);
@@ -470,9 +594,31 @@
   .underline {
     text-decoration-line: underline;
   }
+  .underline-offset-1 {
+    text-underline-offset: 1px;
+  }
+  .underline-offset-2 {
+    text-underline-offset: 2px;
+  }
+  .underline-offset-4 {
+    text-underline-offset: 4px;
+  }
+  .underline-offset-5 {
+    text-underline-offset: 5px;
+  }
+  .underline-offset-6 {
+    text-underline-offset: 6px;
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
+  }
+  .\[word-spacing\:10px\] {
+    word-spacing: 10px;
   }
   .hover\:cursor-pointer {
     &:hover {
@@ -498,6 +644,16 @@
       max-width: calc(var(--spacing) * 124);
     }
   }
+  .sm\:grid-cols-2 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .sm\:gap-x-2 {
+    @media (width >= 40rem) {
+      column-gap: calc(var(--spacing) * 2);
+    }
+  }
   .sm\:text-xl {
     @media (width >= 40rem) {
       font-size: var(--text-xl);
@@ -509,39 +665,19 @@
       max-height: calc(var(--spacing) * 130);
     }
   }
-  .md\:max-w-160 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 160);
-    }
-  }
   .md\:max-w-170 {
     @media (width >= 48rem) {
       max-width: calc(var(--spacing) * 170);
     }
   }
-  .md\:max-w-177 {
+  .md\:max-w-190 {
     @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 177);
+      max-width: calc(var(--spacing) * 190);
     }
   }
-  .md\:max-w-178 {
+  .md\:max-w-210 {
     @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 178);
-    }
-  }
-  .md\:max-w-180 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 180);
-    }
-  }
-  .md\:max-w-200 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 200);
-    }
-  }
-  .md\:max-w-220 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 220);
+      max-width: calc(var(--spacing) * 210);
     }
   }
   .md\:max-w-226 {
@@ -552,6 +688,16 @@
   .md\:min-w-124 {
     @media (width >= 48rem) {
       min-width: calc(var(--spacing) * 124);
+    }
+  }
+  .md\:min-w-150 {
+    @media (width >= 48rem) {
+      min-width: calc(var(--spacing) * 150);
+    }
+  }
+  .md\:min-w-160 {
+    @media (width >= 48rem) {
+      min-width: calc(var(--spacing) * 160);
     }
   }
   .md\:min-w-178 {
@@ -573,6 +719,11 @@
   .md\:gap-x-4 {
     @media (width >= 48rem) {
       column-gap: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:gap-x-8 {
+    @media (width >= 48rem) {
+      column-gap: calc(var(--spacing) * 8);
     }
   }
   .md\:text-2xl {
@@ -599,6 +750,11 @@
       line-height: calc(var(--spacing) * 10);
     }
   }
+  .md\:text-yellow-300 {
+    @media (width >= 48rem) {
+      color: var(--color-yellow-300);
+    }
+  }
   .lg\:ml-6 {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * 6);
@@ -614,19 +770,9 @@
       max-height: calc(var(--spacing) * 110);
     }
   }
-  .lg\:max-w-220 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 220);
-    }
-  }
   .lg\:max-w-240 {
     @media (width >= 64rem) {
       max-width: calc(var(--spacing) * 240);
-    }
-  }
-  .lg\:max-w-242 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 242);
     }
   }
   .lg\:max-w-250 {
@@ -634,9 +780,19 @@
       max-width: calc(var(--spacing) * 250);
     }
   }
-  .lg\:max-w-300 {
+  .lg\:max-w-260 {
     @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 300);
+      max-width: calc(var(--spacing) * 260);
+    }
+  }
+  .lg\:max-w-270 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 270);
+    }
+  }
+  .lg\:max-w-290 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 290);
     }
   }
   .lg\:max-w-304 {
@@ -654,6 +810,16 @@
       min-width: calc(var(--spacing) * 130);
     }
   }
+  .lg\:min-w-220 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 220);
+    }
+  }
+  .lg\:min-w-240 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 240);
+    }
+  }
   .lg\:min-w-242 {
     @media (width >= 64rem) {
       min-width: calc(var(--spacing) * 242);
@@ -667,11 +833,6 @@
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-  .lg\:grid-cols-3 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:gap-x-8 {
